# qt_serial_com

./: .gitignore  .gitmodules  CMakeLists.txt  PkgConfigPath.cmake  main.cpp  qtSerialCom.cpp  qtSerialCom.h  qtSerialCom.ui  qt_serial_com.cpp  qt_serial_com.h
modules/: CMakeLists.txt
modules/qt_serial_com/: CMakeLists.txt  main.cpp  qt_serial_com.cpp  qt_serial_com.desktop  qt_serial_com.h  qt_serial_com.ui
